--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,10 @@ export("geom_timeline_label")
 export("theme_timeline")
 export("eq_map")
 export("eq_create_label")
+importFrom("dplyr", "group_by")
 importFrom("dplyr", "mutate")
+importFrom("dplyr", "top_n")
+importFrom("dplyr", "ungroup")
 importFrom("ggplot2", "ggproto")
 importFrom("ggplot2", "Geom")
 importFrom("ggplot2", "aes")
@@ -28,8 +31,5 @@ importFrom("magrittr", "%>%")
 importFrom("scales", "alpha")
 importFrom("stringr", "str_split")
 importFrom("stringr", "str_trim")
-importFrom("tidyr", "ungroup")
-importFrom("tidyr", "group_by_")
-importFrom("tidyr", "top_n")
-importFrom("tidyr", "ungroup")
+
 
