In NAMESPACE, group_by_, top_n and ungroup belong to dplyr package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export("geom_timeline_label")
 export("theme_timeline")
 export("eq_map")
 export("eq_create_label")
-importFrom("dplyr", "group_by")
+importFrom("dplyr", "group_by_")
 importFrom("dplyr", "mutate")
 importFrom("dplyr", "top_n")
 importFrom("dplyr", "ungroup")
