Adding package and functions being referenced in the executable portion of the vignettes/MasterRCap.Rmd readr::read_delim dplyr::filter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export("geom_timeline_label")
 export("theme_timeline")
 export("eq_map")
 export("eq_create_label")
+importFrom("dplyr", "filter")
 importFrom("dplyr", "group_by_")
 importFrom("dplyr", "mutate")
 importFrom("dplyr", "top_n")
@@ -28,6 +29,7 @@ importFrom("leaflet", "leaflet")
 importFrom("leaflet", "addTiles")
 importFrom("leaflet", "addCircleMarkers")
 importFrom("magrittr", "%>%")
+importFrom("readr", "read_delim")
 importFrom("scales", "alpha")
 importFrom("stringr", "str_split")
 importFrom("stringr", "str_trim")
