Since DATE needs to be of class Date, as per instruction from week1, I change the date conversion from using base::ISODate to lubridate::make_date

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom("grid", "textGrob")
 importFrom("leaflet", "leaflet")
 importFrom("leaflet", "addTiles")
 importFrom("leaflet", "addCircleMarkers")
+importFrom("lubridate", "make_date")
 importFrom("magrittr", "%>%")
 importFrom("readr", "read_delim")
 importFrom("scales", "alpha")
